# llm-asking-questions-evaluating-answers

./: .env.example  .gitignore  AI_chat_bot_answers_all.csv  AI_chat_bot_answers_test.csv  RAG_questions_answers.csv  README.md  Ragas_answers_all_AI_chat_bot.csv  answers_30.xlsx  asking_questions.ipynb  cheatsheet.txt  llm_answers.xlsx  llm_answers_30.xlsx  model_answers.csv  not_matching_scores.csv  pyproject.toml  query_RAG.ipynb  questions.csv  qwen35397ba17b_answers.csv  qwen35vl122ba10bmlxcrack_answers.csv  qwen397b_answers_ragas.csv  qwenqwen3535b_answers_ragas_test.csv  request_to_chat_bot.py  request_to_rag.py  review_judge_streamlit.py  run_questions.py  score_with_ragas.py
data/: gemma431bitmlx_answers.csv  gemma_answers_ragas.csv  llm_answers_30_scored.csv  qwen35b_answers_ragas.csv  qwenmlxcrack_answers_ragas.csv  qwenqwen3535b_answers.csv
llm_eval/: __init__.py  chat_bot_client.py  evaluators.py  io.py  models.py  pipeline.py
summary_data/: ragas_final_table.csv
