[project]
name = "asking-questions-to-llm"
version = "0.1.0"
description = "Project for asking questions to LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.7",
    "numpy",
    "openai",
    "openpyxl>=3.1.5",
    "pandas",
]
