[project]
name = "asking-questions-to-llm"
version = "0.1.0"
description = "Project for asking questions to LLMs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "huggingface-hub>=1.19.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy",
    "onnxruntime==1.20.1",
    "openai",
    "openpyxl>=3.1.5",
    "pandas",
    "python-dotenv>=1.2.2",
    "ragas>=0.4,<0.5",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "transformers>=5.12.0",
]
